--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,12 @@
 
 </head>
 
-<body>
+<body class="pt-5">
 <div class="container-fluid">
-    <header class="fixed-top" role="banner">
-        <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-black">
+    <header role="banner" class="fixed-top">
+        <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="/"><img style="height:55px;width:73px;" src="assets/images/icon.png"
-                                                      alt="icon image"></a>
+                <a class="navbar-brand" href="/">MyWebClass.org</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -38,152 +37,79 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" style="color:white" href="index.html">Homepage</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" style="color:white" href="story.html">Our Story</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" style="color:white" href="privacy.html">Privacy Policy</a>
+                            <a class="nav-link" href="content.html">Content Template</a>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </nav>
-
-        <nav aria-label="Breadcrumb" class="py-3 d-none d-md-block">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-auto text-start">
-                        <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li aria-current="page" class="breadcrumb-item active">Content Template</li>
-                        </ol>
-                    </div>
                 </div>
             </div>
         </nav>
     </header>
-
-    <div class="container">
-        <div class="row">
-            <!-- Main content area -->
-            <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
-
-                <h1 class="fw-bold border-bottom" id="title">Our Story</h1>
-                <div class="text-muted mb-3 ">By <a href="#">GetTracking Inc.</a><span class="text-muted me-3"> Last Updated:
-              March 22 , 2023</span> <span class="text-muted" id="readingTime">0</span>
+    <main>
+        <div class="container my-5">
+            <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
+                <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
+                    <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
+                    <p class="lead">Empower your students with cutting-edge software engineering skills. Join
+                        MyWebClass and discover advanced technologies that will transform your teaching and their
+                        learning journey.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                        <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
+                            Here
+                        </button>
+                    </div>
                 </div>
-
-                <section class="row">
-                    <h2 class="h4 mb-4"><u>Mission</u></h2>
-                    <p>Our mission at GetTracking is to provide individuals with the knowledge, tools, and support
-                        they need to make informed decisions about their health and wellness. We are committed to
-                        delivering personalized and science-backed nutrition and exercise tracking solutions that
-                        are accessible, convenient, and easy to use. We aim to inspire and motivate our customers
-                        to take an active role in their health and wellness journey, while also fostering a sense
-                        of community and support through our platform. Our team is dedicated to continuously improving
-                        and innovating our products and services, with a focus on user experience, privacy,
-                        and security.We believe that by empowering individuals to take control of their health
-                        and wellness, we can make a positive impact on their lives and the world around us.</p>
-
-                    <h2 class="h4 mb-4"><u>Values</u></h2>
-                    <ul>
-                        <li><strong>Empowerment:</strong> We believe in empowering individuals to take control of their
-                            health and wellness journey through personalized and science-backed information.
-                        </li>
-                        <li><strong>Transparency:</strong> We are committed to transparency and honesty in all that we
-                            do, from the information we provide to our customers to our business practices.
-                        </li>
-                        <li><strong>Accessibility:</strong> We believe that everyone should have access to the tools and
-                            resources they need to live a healthy and fulfilling life, which is why we strive to make
-                            our platform accessible and user-friendly for all.
-                        </li>
-                        <li><strong>Privacy and Security:</strong> We take the privacy and security of our customers'
-                            data very seriously, and are committed to complying with all relevant data protection
-                            regulations.
-                        </li>
-                        <li><strong>Innovation:</strong> We are dedicated to continuously improving and innovating our
-                            platform, with a focus on user experience, functionality, and accuracy.
-                        </li>
-                        <li><strong>Education:</strong> We believe in providing our customers with the knowledge and
-                            education they need to make informed decisions about their health and wellness.
-                        </li>
-                        <li><strong>Community:</strong> We are committed to fostering a sense of community and support
-                            among our customers, and believe that together, we can achieve more than we could alone.
-                        </li>
-                        <li><strong>Adaptability:</strong> We understand that everyone's needs and goals are different,
-                            which is why we strive to provide personalized recommendations and adapt to the changing
-                            needs of our customers.
-                        </li>
-                    </ul>
-                    <p>Each of these values supports our mission by creating a welcoming and supportive
-                        environment for students and teachers to learn and grow. Our focus on people ensures
-                        that everyone feels included and valued, and our commitment to learning provides
-                        educational opportunities that help students and teachers succeed in the modern software
-                        industry. Our emphasis on efficiency and dependability allows us to provide a practical,
-                        reliable platform that makes the most of everyone's time.</p>
-
-                    <h2 class="h4 mb-4"><u>Origin</u></h2>
-                    <p>The idea for GetTracking was born out of our own personal struggles with maintaining healthy
-                        eating habits and exercise routines as college students. We noticed that we often found
-                        ourselves grabbing fast food on the go and not paying enough attention to our nutrition needs.
-                        We knew we needed to make a change, but we also recognized that we lacked the knowledge and
-                        tools to do so effectively.
-                        As we started to research and experiment with different nutrition and exercise tracking methods,
-                        we quickly realized that there were very few resources available that provided personalized and
-                        science-backed information. We also found that many of the existing solutions were either too
-                        complex or not user-friendly enough for the average person to use.
-                        This is when we had our "aha" moment. We realized that there was a real need for a comprehensive
-                        and user-friendly nutrition and exercise tracking platform that would empower individuals to
-                        take control of their health and wellness journey.
-                        We spent months researching, developing, and refining our idea, working closely with nutrition
-                        and fitness experts to ensure that our platform would provide accurate and personalized
-                        information. We also focused on creating an intuitive and user-friendly interface that would
-                        make it easy for anyone to use, regardless of their level of tech-savviness.
-                        Today, GetTracking is a provider of personalized nutrition and exercise tracking solutions,
-                        helping thousands of individuals around the world achieve their health and fitness goals. We are
-                        proud of how far we've come and are committed to continuing to innovate and improve our platform
-                        so that we can help even more people live healthier and happier lives.
-                    </p>
-
-                    <p>Thank you for your interest in GetTracking. Together, we can create a community of
-                        people committed to improving their nutritional habits and living healthier lifestyles.</p>
-                </section>
-            </main>
+                <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.gif"
+                         alt="a teacher with students" width="720">
+                </div>
+            </div>
         </div>
-    </div>
-    <br>
-<footer class="bg-black text-white py-6 container-100">
-    <div class="row">
-        <div class="col" style="margin:30px;">
-            <h5><strong>About Us</strong></h5>
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                <li class="nav-item mb-2"><a href="story.html" class="nav-link p-0 text-muted">Our
-                    Story</a>
-                </li>
-                <a class="nav-link mb-2 p-0 text-muted active" aria-current="page" href="privacy.html">Privacy
-                    Policy</a>
-                </li>
-                </li>
-            </ul>
-        </div>
+    </main>
+    <footer class="py-5 container">
+        <div class="row">
+            <div class="col">
+                <h5>About Us</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                    <li class="nav-item mb-2"><a href="story.html" class="nav-link p-0 text-muted">Our
+                        Story</a>
+                    </li>
 
-        <div class="col-sm-2" style="padding-top:40px; padding-left:70px;">
-            <h5><strong>Share on Social Media</strong></h5>
-            <ul class="nav">
-                <li class="nav-item mb-2"><a href="https://www.linkedin.com/" class="nav-link p-0 text-muted"><i
-                        class="bi bi-linkedin me-3"></i></a></li>
-                <li class="nav-item mb-2"><a href="https://www.twitter.com/" class="nav-link p-0 text-muted"><i
-                        class="bi bi-twitter me-3"></i></a>
-                </li>
-                <li class="nav-item mb-2"><a href="https://www.facebook.com/" class="nav-link p-0 text-muted"><i
-                        class="bi bi-facebook me-3"></i></a></li>
-            </ul>
+                    <a class="nav-link mb-2 p-0 text-muted active" aria-current="page" href="privacy.html">Privacy
+                        Policy</a>
+                    </li>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-3 ">
+                <h5>Share on Social Media</h5>
+                <ul class="nav">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                            class="bi bi-linkedin me-2"></i></a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                            class="bi bi-twitter me-2"></i></a>
+                    </li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                            class="bi bi-facebook me-2"></i></a></li>
+                </ul>
+            </div>
+
+
+            <div class="col-md-5 offset-md-1 mb-3">
+                <form>
+                    <h5>Subscribe to our newsletter</h5>
+                    <p>Monthly digest of what's new and exciting from us.</p>
+                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                        <label for="newsletter1" class="visually-hidden">Email address</label>
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </div>
 </body>
+
 </html>
