--- a/src/content.html
+++ b/src/content.html
@@ -8,6 +8,10 @@
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="scss/styles.scss">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
@@ -26,7 +30,7 @@
     <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
             <div class="container">
-                <a class="navbar-brand" href="/">MyWebClass.org</a>
+                <a class="navbar-brand" href="index.html">MyWebClass.org</a>
                 <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                         data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
                     <span aria-hidden="true" class="navbar-toggler-icon"></span>
@@ -47,7 +51,7 @@
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                         </ol>
                     </div>
@@ -70,217 +74,51 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
                 <section id="title">
                     <h1 class="fw-bold border-bottom">Article Title</h1>
-                    <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+                    <div class="text-muted mb-3 ">By Author</a><span class="text-muted me-3"> Last Updated:
                 January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                     </div>
                 </section>
+                <section id="section1">
+                    <h2>Develop and curate high-quality content</h2>
+                    <p>
+                        <ul>
+                            <li>Conduct research on web development topics and create a content strategy.</li>
+                            <li>Hire writers and editors to develop and edit high-quality content.</li>
+                            <li>Establish partnerships with web development experts and professionals to provide expert insights and opinions.</li>
+                            <li>Implement a content management system to streamline content creation and curation.</li>
+                        </ul>
+                    </p>
+                </section>
                 <section id="section2">
-                    <h2>Section 2</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
+                    <h2>Create a web community forum</h2>
+                    <p>
+                        <ul>
+                            <li>Design and develop a community forum platform that is user-friendly and easy to navigate.</li>
+                            <li>Establish guidelines for community participation and moderation.</li>
+                            <li>Recruit moderators to monitor and manage forum discussions.</li>
+                            <li>Integrate the community forum with the educational hub website for seamless navigation.</li>
+                        </ul>
                     </p>
                 </section>
                 <section id="section3">
-                    <h2>Section 3</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
+                    <h2>Offer online courses and workshops</h2>
+                    <p>
+                        <ul>
+                            <li>Identify the most in-demand web development skills and create course outlines.</li>
+                            <li>Hire instructors to develop and teach online courses and workshops.</li>
+                            <li>Establish partnerships with web development companies to provide practical experience opportunities.</li>
+                            <li>Implement a learning management system to track progress and completion of courses and workshops.</li>
+                        </ul>
                     </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                </section>
-                <section id="section4">
-                    <h2>Section 4</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus
-                        nibh
-                        dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur
-                        risus ex ac
-                        lectus. Quisque id lacus non velit aliquet ultrices. Morbi vel arcu varius, commodo nulla eu,
-                        luctus est.
-                        Donec efficitur, sapi
+                </section> <section id="section4">
+                    <h2>Provide resources for career development</h2>
+                    <p>
+                        <ul>
+                            <li>Conduct research on job trends in the web development industry and create a job board.</li>
+                            <li>Create resume templates and provide career advice articles.</li>
+                            <li>Establish partnerships with web development companies to provide internship and job opportunities.</li>
+                            <li>Develop a mentorship program to connect experienced web developers with aspiring developers.</li>
+                        </ul>
                     </p>
                 </section>
             </main>
