--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,15 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="scss/styles.scss">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Keith Williams"/>
-    <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
+    <meta name="author" content="Allie He, Zach Garcia, Kaan Okul"/>
+    <meta name="description" content="A project that creates a hub to help web developers">
 
     <!--OpenGraph meta -->
     <meta property="og:title" content=""/>
@@ -27,7 +31,7 @@
     <header role="banner" class="fixed-top">
         <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="/">MyWebClass.org</a>
+                <a class="navbar-brand" href="index.html">MyWebClass.org</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -46,21 +50,13 @@
     </header>
     <main>
         <div class="container my-5">
-            <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
-                <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
-                    <p class="lead">Empower your students with cutting-edge software engineering skills. Join
-                        MyWebClass and discover advanced technologies that will transform your teaching and their
-                        learning journey.</p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                        <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
-                            Here
+                    <h1 class="display-6 fw-bold lh-1">The only web development hub you'll need!</h1>
+                    <p class="lead">This is an educational hub website for web developers to access high-quality content and 
+                        resources, to learn, grow, and share their knowledge. While also creating a more 
+                        engaged and connected web development community that provides ongoing benefits to web developers.</p>
+                        <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start Here!
                         </button>
                     </div>
-                </div>
-                <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.gif"
-                         alt="a teacher with students" width="720">
                 </div>
             </div>
         </div>
