--- a/src/story.html
+++ b/src/story.html
@@ -8,6 +8,10 @@
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="scss/styles.scss">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
@@ -26,7 +30,7 @@
     <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
             <div class="container">
-                <a class="navbar-brand" href="/">MyWebClass.org</a>
+                <a class="navbar-brand" href="index.html">MyWebClass.org</a>
                 <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
                         class="navbar-toggler"
                         data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
@@ -48,7 +52,7 @@
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                         </ol>
                     </div>
